@@ -15,7 +15,7 @@ from classes import Sec
 from classes import banList
 from classes import stickers
 
-from globals.globalvars import ejabberdServer
+from globals.globalvars import ejabberdServer, ejabberdServerHttpBindFQDN
 
 from functions import themes
 from functions import securityFunc
@@ -27,7 +27,10 @@ def view_page(loc):
     sysSettings = settings.settings.query.first()
 
     xmppserver = sysSettings.siteAddress
-    if ejabberdServer != "127.0.0.1" and ejabberdServer != "localhost":
+
+    if ejabberdServerHttpBindFQDN != None:
+        xmppserver = ejabberdServerHttpBindFQDN
+    elif ejabberdServer != "127.0.0.1" and ejabberdServer != "localhost":
         xmppserver = ejabberdServer
 
     requestedChannel = Channel.Channel.query.filter_by(channelLoc=loc).first()
